# ComputationalMath

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/approximations/: CMakeLists.txt  bisect.md  bisectN.md  derivative.cpp  derivative.hpp  fixedPointIteration.md  hybridNewtonsMethod.md  hybridSecantMethod.md  main.cpp  newtonsMethod.md  polynomial.cpp  polynomial.hpp  polynomial.md  roots.hpp  roots.md  secantMethod.md  series.cpp  series.hpp
src/constants/: Cmadw  constants.hpp
src/eigenvalues/: CMakeLists.txt  eigenvalues.md  inversePower.md  power.cpp  power.md
src/error/: CMakeLists.txt  error.cpp  error.hpp  maceps.cpp  maceps.hpp  maceps.md  precision.cpp  precision.hpp
src/fft/: CMakeLists.txt  fft.c  fft.h  fft.md  ifft.md
src/interpolation/: CMakeLists.txt  interpolation.cpp  interpolation.hpp  interpolation.md
src/linalg/: CMakeLists.txt  error.cpp  error.hpp  error.md  factoring.cpp  factoring.hpp  factoring.md  iterative.cpp  iterative.hpp  iterative.md  matop.cpp  matop.hpp  matop.md  norms.cpp  norms.md  pariterative.cpp  pariterative.hpp  pariterative.md  parmatop.cpp  parmatop.md  power.cpp  power.hpp  power.md
src/matrix_solutions/: CMakeLists.txt  conjugateGradient.md  factoring.cpp  factoring.md  gaussSeidel.md  iterative.cpp  iterative.hpp  iterative.hpp.gch  iterative.md  jacobi.md  pariterative.cpp  pariterative.md  steepestDescent.md
test/: CMakeLists.txt  main.cpp
